src-gen/co/edu/javeriana/interpreter/antlr/LogoParser.java
// $ANTLR 3.5 C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g 2016-05-02 00:15:12

package co.edu.javeriana.interpreter.antlr;
import co.edu.javeriana.turtle.*;
import co.edu.javeriana.interpreter.*;
import clases_Interpreter.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class LogoParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "COMMA", "CORCH_C", 
		"CORCH_O", "DECLARATION", "DIFFERENT", "DIVI", "DO", "DOSP", "ELSE", "ENDF", 
		"ENDIF", "ENDWHILE", "EQUAL", "FLOTANTE", "FUNC", "ID", "IF", "MAX_E_THAN", 
		"MAX_THAN", "MIENTRAS", "MIN_E_THAN", "MIN_THAN", "MOVE_B", "MOVE_F", 
		"MULT", "NEGA", "NOT", "NUMBER", "OR", "PAR_C", "PAR_O", "PENCOLOR", "PRINT", 
		"QUOT", "QUOT_C", "QUOT_O", "REST", "RETORNO", "ROTATE_L", "ROTATE_R", 
		"STR", "STRING", "SUM", "THEN", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int COMMA=6;
	public static final int CORCH_C=7;
	public static final int CORCH_O=8;
	public static final int DECLARATION=9;
	public static final int DIFFERENT=10;
	public static final int DIVI=11;
	public static final int DO=12;
	public static final int DOSP=13;
	public static final int ELSE=14;
	public static final int ENDF=15;
	public static final int ENDIF=16;
	public static final int ENDWHILE=17;
	public static final int EQUAL=18;
	public static final int FLOTANTE=19;
	public static final int FUNC=20;
	public static final int ID=21;
	public static final int IF=22;
	public static final int MAX_E_THAN=23;
	public static final int MAX_THAN=24;
	public static final int MIENTRAS=25;
	public static final int MIN_E_THAN=26;
	public static final int MIN_THAN=27;
	public static final int MOVE_B=28;
	public static final int MOVE_F=29;
	public static final int MULT=30;
	public static final int NEGA=31;
	public static final int NOT=32;
	public static final int NUMBER=33;
	public static final int OR=34;
	public static final int PAR_C=35;
	public static final int PAR_O=36;
	public static final int PENCOLOR=37;
	public static final int PRINT=38;
	public static final int QUOT=39;
	public static final int QUOT_C=40;
	public static final int QUOT_O=41;
	public static final int REST=42;
	public static final int RETORNO=43;
	public static final int ROTATE_L=44;
	public static final int ROTATE_R=45;
	public static final int STR=46;
	public static final int STRING=47;
	public static final int SUM=48;
	public static final int THEN=49;
	public static final int WS=50;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LogoParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LogoParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return LogoParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g"; }


	private Turtle turtle;
		public LogoParser(Turtle turtle, TokenStream input) {
		    this(input);
		    this.turtle = turtle;
		}



	// $ANTLR start "program"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:26:3: program : ( func )* ( command )+ ;
	public final void program() throws RecognitionException {
		Evaluator func1 =null;
		Evaluator command2 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:26:10: ( ( func )* ( command )+ )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:27:3: ( func )* ( command )+
			{
			Comandos c=new Comandos();
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:28:3: ( func )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==FUNC) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:28:4: func
					{
					pushFollow(FOLLOW_func_in_program54);
					func1=func();
					state._fsp--;

					c.add(func1);
					}
					break;

				default :
					break loop1;
				}
			}

			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:29:3: ( command )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==DECLARATION||(LA2_0 >= ID && LA2_0 <= IF)||LA2_0==MIENTRAS||(LA2_0 >= MOVE_B && LA2_0 <= MOVE_F)||(LA2_0 >= PENCOLOR && LA2_0 <= PRINT)||(LA2_0 >= ROTATE_L && LA2_0 <= ROTATE_R)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:29:4: command
					{
					pushFollow(FOLLOW_command_in_program63);
					command2=command();
					state._fsp--;

					c.add(command2);
					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			c.evaluate(new TS());
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "func"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:32:3: func returns [Evaluator e] : FUNC ID PAR_O param PAR_C DOSP ( command )* ( retorno )? ENDF ;
	public final Evaluator func() throws RecognitionException {
		Evaluator e = null;


		Token ID4=null;
		Evaluator command3 =null;
		List<Evaluator> param5 =null;
		Evaluator retorno6 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:33:3: ( FUNC ID PAR_O param PAR_C DOSP ( command )* ( retorno )? ENDF )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:33:4: FUNC ID PAR_O param PAR_C DOSP ( command )* ( retorno )? ENDF
			{
			Comandos c=new Comandos();
			match(input,FUNC,FOLLOW_FUNC_in_func94); 
			ID4=(Token)match(input,ID,FOLLOW_ID_in_func96); 
			match(input,PAR_O,FOLLOW_PAR_O_in_func98); 
			pushFollow(FOLLOW_param_in_func100);
			param5=param();
			state._fsp--;

			match(input,PAR_C,FOLLOW_PAR_C_in_func102); 
			match(input,DOSP,FOLLOW_DOSP_in_func104); 
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:35:3: ( command )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==DECLARATION||(LA3_0 >= ID && LA3_0 <= IF)||LA3_0==MIENTRAS||(LA3_0 >= MOVE_B && LA3_0 <= MOVE_F)||(LA3_0 >= PENCOLOR && LA3_0 <= PRINT)||(LA3_0 >= ROTATE_L && LA3_0 <= ROTATE_R)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:35:4: command
					{
					pushFollow(FOLLOW_command_in_func109);
					command3=command();
					state._fsp--;

					c.add(command3);
					}
					break;

				default :
					break loop3;
				}
			}

			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:35:35: ( retorno )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==RETORNO) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:35:36: retorno
					{
					pushFollow(FOLLOW_retorno_in_func116);
					retorno6=retorno();
					state._fsp--;

					}
					break;

			}

			match(input,ENDF,FOLLOW_ENDF_in_func122); 
			e =new DeclaF(c,(ID4!=null?ID4.getText():null),param5,retorno6);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return e;
	}
	// $ANTLR end "func"



	// $ANTLR start "declaF"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:39:3: declaF returns [Evaluator e] : ID PAR_O paramLlamada PAR_C ;
	public final Evaluator declaF() throws RecognitionException {
		Evaluator e = null;


		Token ID7=null;
		List<Evaluator> paramLlamada8 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:40:3: ( ID PAR_O paramLlamada PAR_C )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:40:4: ID PAR_O paramLlamada PAR_C
			{
			ID7=(Token)match(input,ID,FOLLOW_ID_in_declaF146); 
			match(input,PAR_O,FOLLOW_PAR_O_in_declaF148); 
			pushFollow(FOLLOW_paramLlamada_in_declaF150);
			paramLlamada8=paramLlamada();
			state._fsp--;

			match(input,PAR_C,FOLLOW_PAR_C_in_declaF152); 
			e =new Funcion((ID7!=null?ID7.getText():null),paramLlamada8);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return e;
	}
	// $ANTLR end "declaF"



	// $ANTLR start "paramLlamada"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:44:3: paramLlamada returns [List<Evaluator> ev] : (exp= expression ( COMMA exp1= expression )* )? ;
	public final List<Evaluator> paramLlamada() throws RecognitionException {
		List<Evaluator> ev = null;


		Evaluator exp =null;
		Evaluator exp1 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:45:3: ( (exp= expression ( COMMA exp1= expression )* )? )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:45:4: (exp= expression ( COMMA exp1= expression )* )?
			{
			List<Evaluator> listP=new ArrayList();
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:46:3: (exp= expression ( COMMA exp1= expression )* )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==FLOTANTE||LA6_0==ID||LA6_0==NUMBER||LA6_0==PAR_O||LA6_0==REST||(LA6_0 >= STR && LA6_0 <= SUM)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:46:4: exp= expression ( COMMA exp1= expression )*
					{
					pushFollow(FOLLOW_expression_in_paramLlamada185);
					exp=expression();
					state._fsp--;

					listP.add(exp);
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:46:39: ( COMMA exp1= expression )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==COMMA) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:46:40: COMMA exp1= expression
							{
							match(input,COMMA,FOLLOW_COMMA_in_paramLlamada189); 
							pushFollow(FOLLOW_expression_in_paramLlamada193);
							exp1=expression();
							state._fsp--;

							listP.add(exp1);
							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;

			}

			ev =listP;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ev;
	}
	// $ANTLR end "paramLlamada"



	// $ANTLR start "param"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:49:3: param returns [List<Evaluator> ev] : ( DECLARATION id= ID ( COMMA ( DECLARATION id= ID )* ) )? ;
	public final List<Evaluator> param() throws RecognitionException {
		List<Evaluator> ev = null;


		Token id=null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:50:3: ( ( DECLARATION id= ID ( COMMA ( DECLARATION id= ID )* ) )? )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:50:4: ( DECLARATION id= ID ( COMMA ( DECLARATION id= ID )* ) )?
			{
			List<Evaluator> listP=new ArrayList();
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:51:3: ( DECLARATION id= ID ( COMMA ( DECLARATION id= ID )* ) )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==DECLARATION) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:51:4: DECLARATION id= ID ( COMMA ( DECLARATION id= ID )* )
					{
					match(input,DECLARATION,FOLLOW_DECLARATION_in_param227); 
					id=(Token)match(input,ID,FOLLOW_ID_in_param231); 
					listP.add(new Decla(id.getText(),new Defect()));
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:52:3: ( COMMA ( DECLARATION id= ID )* )
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:52:4: COMMA ( DECLARATION id= ID )*
					{
					match(input,COMMA,FOLLOW_COMMA_in_param237); 
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:52:9: ( DECLARATION id= ID )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==DECLARATION) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:52:10: DECLARATION id= ID
							{
							match(input,DECLARATION,FOLLOW_DECLARATION_in_param239); 
							id=(Token)match(input,ID,FOLLOW_ID_in_param243); 
							listP.add(new Decla(id.getText(),new Defect()));
							}
							break;

						default :
							break loop7;
						}
					}

					}

					}
					break;

			}

			ev =listP;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return ev;
	}
	// $ANTLR end "param"



	// $ANTLR start "retorno"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:55:3: retorno returns [Evaluator e] : RETORNO expression ;
	public final Evaluator retorno() throws RecognitionException {
		Evaluator e = null;


		Evaluator expression9 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:56:3: ( RETORNO expression )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:56:4: RETORNO expression
			{
			match(input,RETORNO,FOLLOW_RETORNO_in_retorno274); 
			pushFollow(FOLLOW_expression_in_retorno276);
			expression9=expression();
			state._fsp--;

			e =new Retorno(expression9);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return e;
	}
	// $ANTLR end "retorno"



	// $ANTLR start "ciclo"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:59:3: ciclo returns [Evaluator e] : MIENTRAS PAR_O expression PAR_C DO ( command )+ ENDWHILE ;
	public final Evaluator ciclo() throws RecognitionException {
		Evaluator e = null;


		Evaluator command10 =null;
		Evaluator expression11 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:60:3: ( MIENTRAS PAR_O expression PAR_C DO ( command )+ ENDWHILE )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:60:5: MIENTRAS PAR_O expression PAR_C DO ( command )+ ENDWHILE
			{
			Comandos cc=new Comandos();
			match(input,MIENTRAS,FOLLOW_MIENTRAS_in_ciclo312); 
			match(input,PAR_O,FOLLOW_PAR_O_in_ciclo314); 
			pushFollow(FOLLOW_expression_in_ciclo316);
			expression11=expression();
			state._fsp--;

			match(input,PAR_C,FOLLOW_PAR_C_in_ciclo318); 
			match(input,DO,FOLLOW_DO_in_ciclo320); 
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:62:5: ( command )+
			int cnt9=0;
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==DECLARATION||(LA9_0 >= ID && LA9_0 <= IF)||LA9_0==MIENTRAS||(LA9_0 >= MOVE_B && LA9_0 <= MOVE_F)||(LA9_0 >= PENCOLOR && LA9_0 <= PRINT)||(LA9_0 >= ROTATE_L && LA9_0 <= ROTATE_R)) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:62:6: command
					{
					pushFollow(FOLLOW_command_in_ciclo327);
					command10=command();
					state._fsp--;

					cc.add(command10);
					}
					break;

				default :
					if ( cnt9 >= 1 ) break loop9;
					EarlyExitException eee = new EarlyExitException(9, input);
					throw eee;
				}
				cnt9++;
			}

			match(input,ENDWHILE,FOLLOW_ENDWHILE_in_ciclo336); 
			e =new Ciclo_Mientras(expression11,cc);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return e;
	}
	// $ANTLR end "ciclo"



	// $ANTLR start "conditional"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:66:3: conditional returns [Evaluator e] : IF PAR_O expression PAR_C THEN ( command )+ ENDIF ;
	public final Evaluator conditional() throws RecognitionException {
		Evaluator e = null;


		Evaluator command12 =null;
		Evaluator expression13 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:67:3: ( IF PAR_O expression PAR_C THEN ( command )+ ENDIF )
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:67:4: IF PAR_O expression PAR_C THEN ( command )+ ENDIF
			{
			Comandos c=new Comandos();
			match(input,IF,FOLLOW_IF_in_conditional362); 
			match(input,PAR_O,FOLLOW_PAR_O_in_conditional364); 
			pushFollow(FOLLOW_expression_in_conditional366);
			expression13=expression();
			state._fsp--;

			match(input,PAR_C,FOLLOW_PAR_C_in_conditional368); 
			match(input,THEN,FOLLOW_THEN_in_conditional370); 
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:69:3: ( command )+
			int cnt10=0;
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==DECLARATION||(LA10_0 >= ID && LA10_0 <= IF)||LA10_0==MIENTRAS||(LA10_0 >= MOVE_B && LA10_0 <= MOVE_F)||(LA10_0 >= PENCOLOR && LA10_0 <= PRINT)||(LA10_0 >= ROTATE_L && LA10_0 <= ROTATE_R)) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:69:4: command
					{
					pushFollow(FOLLOW_command_in_conditional375);
					command12=command();
					state._fsp--;

					c.add(command12);
					}
					break;

				default :
					if ( cnt10 >= 1 ) break loop10;
					EarlyExitException eee = new EarlyExitException(10, input);
					throw eee;
				}
				cnt10++;
			}

			match(input,ENDIF,FOLLOW_ENDIF_in_conditional383); 
			e =new Condicionales(expression13,c);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return e;
	}
	// $ANTLR end "conditional"



	// $ANTLR start "command"
	// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:73:3: command returns [Evaluator e] : ( ciclo | conditional | turn_r | turn_l | move_f | move_b | declara | declaF | color | imprime );
	public final Evaluator command() throws RecognitionException {
		Evaluator e = null;


		Evaluator ciclo14 =null;
		Evaluator conditional15 =null;
		Evaluator turn_r16 =null;
		Evaluator turn_l17 =null;
		Evaluator move_f18 =null;
		Evaluator move_b19 =null;
		Evaluator declara20 =null;
		Evaluator declaF21 =null;
		Evaluator color22 =null;
		Evaluator imprime23 =null;

		try {
			// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:74:5: ( ciclo | conditional | turn_r | turn_l | move_f | move_b | declara | declaF | color | imprime )
			int alt11=10;
			switch ( input.LA(1) ) {
			case MIENTRAS:
				{
				alt11=1;
				}
				break;
			case IF:
				{
				alt11=2;
				}
				break;
			case ROTATE_R:
				{
				alt11=3;
				}
				break;
			case ROTATE_L:
				{
				alt11=4;
				}
				break;
			case MOVE_F:
				{
				alt11=5;
				}
				break;
			case MOVE_B:
				{
				alt11=6;
				}
				break;
			case DECLARATION:
				{
				alt11=7;
				}
				break;
			case ID:
				{
				int LA11_8 = input.LA(2);
				if ( (LA11_8==ASSIGN) ) {
					alt11=7;
				}
				else if ( (LA11_8==PAR_O) ) {
					alt11=8;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 11, 8, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case PENCOLOR:
				{
				alt11=9;
				}
				break;
			case PRINT:
				{
				alt11=10;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 11, 0, input);
				throw nvae;
			}
			switch (alt11) {
				case 1 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:74:6: ciclo
					{
					pushFollow(FOLLOW_ciclo_in_command406);
					ciclo14=ciclo();
					state._fsp--;

					e =ciclo14;
					}
					break;
				case 2 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:75:6: conditional
					{
					pushFollow(FOLLOW_conditional_in_command415);
					conditional15=conditional();
					state._fsp--;

					e =conditional15;
					}
					break;
				case 3 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:76:6: turn_r
					{
					pushFollow(FOLLOW_turn_r_in_command424);
					turn_r16=turn_r();
					state._fsp--;

					e =turn_r16;
					}
					break;
				case 4 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:77:6: turn_l
					{
					pushFollow(FOLLOW_turn_l_in_command433);
					turn_l17=turn_l();
					state._fsp--;

					e =turn_l17;
					}
					break;
				case 5 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:78:6: move_f
					{
					pushFollow(FOLLOW_move_f_in_command442);
					move_f18=move_f();
					state._fsp--;

					e =move_f18;
					}
					break;
				case 6 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:79:6: move_b
					{
					pushFollow(FOLLOW_move_b_in_command451);
					move_b19=move_b();
					state._fsp--;

					e =move_b19;
					}
					break;
				case 7 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:80:6: declara
					{
					pushFollow(FOLLOW_declara_in_command460);
					declara20=declara();
					state._fsp--;

					e =declara20;
					}
					break;
				case 8 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:81:6: declaF
					{
					pushFollow(FOLLOW_declaF_in_command469);
					declaF21=declaF();
					state._fsp--;

					e =declaF21;
					}
					break;
				case 9 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:82:6: color
					{
					pushFollow(FOLLOW_color_in_command478);
					color22=color();
					state._fsp--;

					e =color22;
					}
					break;
				case 10 :
					// C:\\Users\\USER\\workspace-pl\\BasicProject\\bin\\Logo.g:83:6: imprime
					{
					pushFollow(FOLLOW_imprime_in_command487);
					imprime23=imprime();
					state._fsp--;

					e =imprime23;
					}
					break;
